# v1_study_builder

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: binary-smoke.yml  build.yml  ci.yml  integration.yml
conf/: book_registry.json  getbiblesword.json  module_policy.json
docs/: nginx.conf  target-repositories.md
schemas/: commentary-chapter.schema.json  dictionary-entry.schema.json  getbiblesword-ndjson-v1.schema.json
scripts/: validate_build.py
src/study_builder/: __init__.py  __main__.py  books.py  catalog.py  chapter_spool.py  cli.py  commentaries.py  content.py  contract.py  dictionaries.py  engine.py  entries.py  git.py  http.py  models.py  modules.py  native.py  pipeline.py  policy.py  security.py  util.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_commentaries.py  test_content.py  test_contract.py  test_dictionaries.py  test_engine.py  test_http.py  test_policy.py  test_security.py  test_util.py
