[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getbible-study-builder"
version = "1.0.0"
description = "Build the GetBible v1 commentary and dictionary static JSON APIs from CrossWire SWORD modules."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-2.0-only"}
authors = [{name = "GetBible", email = "github@vdm.io"}]
dependencies = [
  "bleach>=6.2,<7",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
study-builder = "study_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

